# res

./: .gitignore  .gitmodules  README.md  pyproject.toml
.cursor/plans/: nanoowl_nanosam_backend_eb0e4739.plan.md  res_module_setup_3ae70a4f.plan.md
.github/workflows/: ci.yml
assets/: resnet18_image_encoder.onnx
scripts/: build.sh
src/res/: __init__.py  api.py  cli.py  types.py  ui.py
src/res/backends/: __init__.py  base.py  efficientsam3.py  grounded_sam2.py  mock.py  nanoowl_nanosam.py  qwen3vl_sam2.py  sam2.py  sam3.py
src/res/tools/: build_nanoowl_nanosam_engines.py
tests/: conftest.py
tests/smoke/: test_smoke.py
tests/unit/: test_api.py  test_cli.py  test_efficientsam3_backend.py  test_mock_backend.py  test_nanoowl_nanosam_backend.py  test_sam3_backend.py  test_types.py
