[project]
name = "res"
version = "0.1.0"
description = "Referring Expression Segmentation -- extensible backend system with CLI and Gradio UI"
readme = "README.md"
authors = [
    { name = "Beiwen Tian", email = "tianbeiwen88@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "click",
]

[project.optional-dependencies]
ui = ["gradio>=5"]
sam2 = []
sam3 = ["torch>=2.5", "torchvision", "sam3", "einops", "pycocotools", "psutil"]
grounded-sam2 = []
qwen3vl-sam2 = []
dev = ["pytest", "pytest-cov"]
all = ["gradio>=5"]

[project.scripts]
res = "res.cli:main"

[tool.uv.sources]
sam3 = { path = "third_party/sam3", editable = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
